--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -11,17 +11,20 @@
     /* height: 190px; */
     }
     .banner_title {
-    font-size: 3rem;
-    font-weight: 800;
+    font-size: 2rem;
+    font-weight: 200;
     padding-bottom: 0.3rem;
+    padding-left: 50px;
     }
-    .banner__description {
-    width: 45rem;
+    .banner_description {
+    width: 25rem;
     Line-height: 1;
     padding: 1rem 0;
-    font-size: 1rem;
-    max-width: 360px;
+    font-size: 1.5rem;
+    max-width: 460px;
     height: 80px;
+    font-weight: 200;
+    padding-left: 50px;
     }
 
     .play {
@@ -31,6 +34,7 @@
    .banner_buttons {
         display: flex;
         gap: 2rem; /* Modern alternative to margin-right */
+        padding-left: 50px;
       }
 .banner_buttons button {
         cursor: pointer;
